--- a/18-12/vscode_markdown.css
+++ b/18-12/vscode_markdown.css
@@ -6,7 +6,7 @@ body {
     -webkit-text-size-adjust: 100%;
     line-height: 1.5;
     color: #aaa;
-    background-color: #555;
+    background-color: red;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
     line-height: 1.5;
